--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
     name: expense-tracker
+    runtime: node # TEMPORARY workaround
     buildCommand: "./mvnw clean package -DskipTests"
     startCommand: "java -jar target/*.jar"
-    envVars:
-      - key: JAVA_HOME
-        value: /opt/render/project/.jdk
     plan: free
