Fix: corrected render.yaml runtime config

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
     name: expense-tracker
-    env: java
+    runtime: java
     buildCommand: "./mvnw clean package -DskipTests"
     startCommand: "java -jar target/*.jar"
     envVars:
-      - key: JAVA_HOME
-        value: /opt/render/project/.jdk
+      - key: JAVA_VERSION
+        value: 17
     plan: free
